# Attendance_marking_website

./: README.md
Backend/: .env  Cargo.toml  db.sql
Backend/src/: main.rs
Backend/src/api/: attendance.rs  classes.rs  count.rs  mod.rs  upload_files.rs
Backend/src/auth/: jwt.rs  login.rs  logout.rs  mod.rs  register.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  attendance_embeddings_normed.pkl  index.js  main.py  reference.csv
frontend/src/components/: AttendanceList.js  DateSelector.js  PhotoUploader.js  modal.js
frontend/src/cssfile/: AttendanceList.css  DateSelector.css  PhotoUploader.css  about.css  addstudent.css  login.css  myclass.css  result.css  signup.css  upload.css
frontend/src/pages/: UploadPage.js  about.js  addstudent.js  displayresult.js  login.js  myclass.js  register.js  signup.js  test.js  upload.js
frontend/src/services/: api.js
