[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
bcrypt = "0.15.0"
tokio-postgres = "0.7.10"
serde_derive = "1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = {version = "0.4.31", features = ["serde"]}
jsonwebtoken = "8.3.0"
futures = "0.3.28"
serde_json = "1.0.107"
serde = "1.0.188"
dotenv = "0.15.0"
actix-cors = "0.6.4"
ws = "0.9.2"
lazy_static = "1.4.0"
async-trait = "0.1.73"
actix-multipart = "0.6.1"
image = "0.24.7"
reqwest = { version = "0.11.18", features = ["multipart"] }
mime_guess = "2.0.4"